Bug 1768824 Part 1: Track transfer characteristics for BT709. r=media-playback-reviewers,alwu

BT709 transfer characteristics may be specified in videos even if they don't
use the BT709 colorSpace. This change also makes BT709 the default, since it
is the safest option for unspecified cases.

Differential Revision: https://phabricator.services.mozilla.com/D146734